# docker-signatures

./: README.md  setup.cfg
.github/workflows/: upload-pypi.yml
docker_signatures/: __main__.py
examples/json/: one_signers.json  two_signers.json
examples/plain/: one_signers.txt  two_signers.txt
