[metadata]
name = docker-signatures
description = docker signatures ensure that a Docker Image has all signatures
version = file: VERSION
long_description = file: README.md
long_description_content_type = text/markdown
license = License :: OSI Approved :: BSD License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: Console
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
author = Daniel Garcia (cr0hn)
author_email = cr0hn@cr0hn.com
url = https://github.com/cr0hn/docker-signatures

[options]
zip_safe = True
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    dockerfile-signatures = docker_signatures.__main__:main
